# tdd-demo

./: .coveragerc  .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: pytest.yaml
src/demo_client/: demo_client.py
tests/: demo_client_test.py
